fixes: nav bar mobile height fix, page title padding from top, dismiss navbar on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -441,6 +441,7 @@ h6 {
   }
 
   .mobile-nav-active .navmenu {
+    max-height: 35vh;
     position: fixed;
     overflow: hidden;
     inset: 0;
